      manage an entitlement group has been added.
    * Entitlement management has been added to the Conary repository
      web interface. (CNY-483)

  o Bug Fixes:
    * The "list-groups" option to the "manageents" script has been
      corrected to list the groups the user can manage instead of the
      groups that user belongs to.

Changes in 1.0.17:
  o Client Changes:
    * Individual file removals performed by "conary remove" now create
      rollbacks. (CNY-7)
    * The repository mirroring client supports two new configuration
      options:
      - matchTroves is a regexp list that limits what troves will be
        mirrored based on the trove names;
      - recurseGroups takes a boolean value (True/False) which will
        cause the miror client to recurse through a groups and mirror
        everything that they include into the target repository.

  o Server Changes:
    * A single conary repository can host multiple serverNames. In the
      Conary repository's configuration file, the serverName directive
      can now specify a space separated list of valid server names
      which will be accepted and served from that repository. (CNY-16)

Changes in 1.0.16
  o Build Changes:
    * A check has been added to "cvc commit" that ensures a .recipe
      file exists in the CONARY state file.
    * Recipe classes can now set an "abstractBaseClass" class
      variable.  When set, Conary will not require a setup() method in
      the class.  This is used for creating superclass recipes where
      setup() methods are not needed.

  o Server Changes:
    * A new "entitlementCheckURL" configuration option has been added.
      This is a hook that allows external validation of entitlements.
    * The Conary Repository web interface look and feel has been
      updated.  The interface will look incorrect unless
      conary-web-common 1.0 or later is installed.

  o Bug Fixes:
    * When running "cvc log" on a newly created source component, cvc now